# Jeu01

./: .gitignore  README.md  pyproject.toml
docs/: game_design.md  technical_architecture.md  ui_ux.md
src/re2003/: __init__.py  actions.py  agents.py  config.py  events.py  game_state.py  main.py  serialization.py  timekeeper.py
tests/: test_simulation.py
