[project]
name = "re2003"
version = "0.1.0"
description = "Prototype text-based management RPG for Re:2003"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
re2003 = "re2003.main:run"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
